<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@drawable/back_dialog_corner"
              android:layout_margin="10dp"
              android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="10dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/ic_access"
            android:layout_marginEnd="10dp"/>

        <Custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:gravity="center"
            android:text="@string/label_permission_request"/>



    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_margin="15dp"
        android:background="@android:color/darker_gray"/>


    <Custom.CustomTextView
        android:id="@+id/txt_dialog_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        android:layout_margin="15dp"
        tools:text="@string/app_name"
        android:padding="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">


        <life.sabujak.roundedbutton.RoundedButton
            android:id="@+id/btn_accept_permission_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:fontFamily="@font/isans"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:text="@string/yes"
            android:textColor="@android:color/white"
            app:buttonGradientStartColor="@color/colorPrimaryDark"
            app:buttonGradientEndColor="@color/colorPrimary"
            app:buttonCornerRadius="5dp"
            />


        <life.sabujak.roundedbutton.RoundedButton
            android:id="@+id/btn_deny_permission_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:fontFamily="@font/isans"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:buttonGradientStartColor="@color/colorGray"
            app:buttonGradientEndColor="@color/colorPrimary"
            app:buttonCornerRadius="5dp"
            />


    </LinearLayout>
</LinearLayout>