<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <LinearLayout
            android:id="@+id/container_gallery_dialog_attach_files"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_gallery"/>

            <Custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isBold="true"
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:text="@string/picker_gallery"/>

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/colorGray"/>

        <LinearLayout
            android:id="@+id/container_audio_dialog_attach_files"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_audio"/>

            <Custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isBold="true"
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:text="@string/audio"/>

        </LinearLayout>



    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/colorGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">

        <LinearLayout
            android:id="@+id/container_video_dialog_attach_files"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_video"/>

            <Custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isBold="true"
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:text="@string/video"/>

        </LinearLayout>


        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/colorGray"/>

        <LinearLayout
            android:id="@+id/container_apk_dialog_attach_files"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_android"/>

            <Custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isBold="true"
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:text="@string/apps"/>

        </LinearLayout>


        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@color/colorGray"/>

        <LinearLayout
            android:id="@+id/container_document_dialog_attach_files"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_document"/>

            <Custom.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:isBold="true"
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:textSize="17sp"
                android:text="@string/docuement"/>

        </LinearLayout>




    </LinearLayout>




</LinearLayout>