<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_margin="10dp"
              android:gravity="center"
              android:background="@drawable/back_dialog_corner"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lte_dialog_warning"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:lottie_autoPlay="true"
        android:layout_margin="10dp"
        app:lottie_loop="true"/>

    <Custom.CustomTextView
        android:id="@+id/txt_dialog_warning"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:isBold="true"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        tools:text="تست هشدار"
        android:gravity="center"
        android:textColor="@android:color/black"
        />


    <Custom.CustomTextView
        android:id="@+id/txt_desc_dialog_warning"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        app:isBold="true"
        android:textSize="15sp"
        android:layout_height="wrap_content"
        tools:text="تست هشدار"
        android:gravity="center"
        android:textColor="@android:color/darker_gray"
        />


    <LinearLayout
        android:id="@+id/container_reminder_dialog_warning"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/ch_reminder_dialog_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>


        <Custom.CustomTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:layout_margin="10dp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:text="@string/dont_show_again"
            android:gravity="center|start"
            android:textColor="@android:color/darker_gray"
            />

    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



        <life.sabujak.roundedbutton.RoundedButton
            android:id="@+id/btn_dialog_warning_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:fontFamily="@font/isans"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:onClick="onClick"
            android:text="@string/yes"
            android:textColor="@android:color/white"
            app:buttonGradientStartColor="@color/colorPrimaryDark"
            app:buttonGradientEndColor="@color/colorPrimary"
            app:buttonCornerRadius="5dp"
            />

         <life.sabujak.roundedbutton.RoundedButton
            android:id="@+id/btn_dialog_warning_deny"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:fontFamily="@font/isans"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:onClick="onClick"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            app:buttonGradientStartColor="@color/colorGray"
            app:buttonGradientEndColor="@color/colorAccent"
            app:buttonCornerRadius="5dp"
            />




    </LinearLayout>


</LinearLayout>